# image-banker

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  setup.cfg
.github/workflows/: lint.yaml  test.yaml
development/: yolo.ipynb
script/: download_model
src/image_banker/: __init__.py  app.py  image_client.py  settings.py
tests/: conftest.py  test_client.py  test_streamlit.py
