[metadata]
name = image_banker
version = attr: image_banker.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = ImageBanker: Object Collector & Saver - upload, select and collect your object to create a bank of image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/image-banker
license = MIT

platforms = any

classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    numpy
    pydantic
    pydantic-settings
    rembg
    streamlit
    ultralytics
    watchdog

include_package_data = True
packag_dir = 
    =src
python_requires = >=3.11

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    %(testing)s
    %(dev)s

testing = 
    pytest
    pytest-cov
    coverage

dev =
    ipykernel
    black
    flake8
    isort
    mypy
    pre-commit
    jupyter
    interrogate[png]

[bdist_wheel]
universal = 1

[flake8]
max-line-length=120
ignore=E203

[mypy]
python_version = 3.11
disallow_untyped_defs = True
show_error_codes = True

[isort]
src_paths = 
    src
    tests
profile = black
line_length = 120